# opengrep

./: .gitattributes  .gitmodules  CHANGELOG.md  Dockerfile  INSTALL.md  INTRA_FUNCTION_IMPLEMENTATION.md  Makefile  OPENGREP.md  README-TITO.md  README.md  aa.txt  benchmark_taint.sh  build_and_scan_testapp1.sh  dune-project  flake.nix  install.ps1  install.sh  semgrep.opam  semgrep.yml  setup.py  triton_small.py  triton_test_before.py  vs-semgrep.md
.github/: CODEOWNERS
.github/workflows/: build-manylinux-binary.yml  (+15 more)
cli/: Pipfile  setup.py
dev/: optional.opam  required.opam
docs/: INTRA_FUNCTION_IMPLEMENTATION.md  OPTICS_TUTORIAL.md  PULL_REQUEST_RULES.md
interfaces/: Rule_options.atd
languages/zig/generic/: Parse_zig_tree_sitter.ml  dune
opam/: call_graph.opam  commons.opam  optics_types.opam  parser_vbnet.opam  semgrep.opam  semgrep.opam.template
perf/: corpus.py  run-benchmarks
scripts/: build-nuitka.sh  build-wheels.sh  fix-libev-macos.sh  lint-ocaml  opam-cache-fingerprint.sh  osx-setup-for-release.sh  workflow-build-inside-alpine-container.sh
src/call_graph/: Call_graph.ml  Function_id.ml  Function_id.mli  Graph_fixpoint.ml  Graph_fixpoint.mli  Graph_reachability.ml  Graph_reachability.mli  Graph_serialization.ml  Log_call_graph.ml  dune
src/data/: dune
src/osemgrep/cli_show/: Show_CLI.ml  Show_CLI.mli  Show_html.ml  Show_html.mli  Show_subcommand.ml  dune
src/tainting/: Builtin_models.ml  Callback_extraction.ml  Callback_extraction.mli  Callee_resolution.ml  Callee_resolution.mli  Dataflow_tainting.ml  Dataflow_tainting.mli  Effect_guard.ml  Function_call_graph.ml  Function_call_graph_with_optics.ml  Graph_from_AST.ml  Graph_from_AST.mli  Graph_functor.ml  Lang_config.ml  Object_initialization.ml  Object_initialization.ml.bak  Object_initialization.mli  Shape_and_sig.ml  Sig_inst.ml  Sig_inst.mli  Taint.ml  Taint.mli  Taint_input_env.ml  Taint_lval_env.ml  Taint_lval_env.mli  Taint_shape.ml  Taint_signature_extractor.ml  Taint_signature_extractor.mli  Xtaint.ml  Xtaint.mli  abstract_lsp_analyzer.ml  dune
testapp1/: app.py  dangerous-subprocess-use.interfile.yaml  handlers.py  helpers.py  interfile_rule.yaml  runner.py  source.py
tools/opengrep-diff/: Main.ml  dune
(+1369 files in other folders)
