(library
 (public_name semgrep.tainting)
 (name semgrep_tainting)
 (wrapped false)
 (libraries
   pfff-lang_GENERIC-analyze
   semgrep_core
   semgrep.matching
   semgrep.printing
   callgraph.graph_lib
 )
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_profiling ppx_inline_test))
)
